tests/compile-fail/suzu_translate_on_variant.rs
use suzunari_error::suzunari_error;

#[suzunari_error]
enum MyError {
    #[suzu(translate)]
    Variant {},
}

fn main() {}
