tests/compile-fail/suzu_translate_on_variant.stderr
error: `translate` can only be used on fields
 --> tests/compile-fail/suzu_translate_on_variant.rs:5:12
  |
5 |     #[suzu(translate)]
  |            ^^^^^^^^^
